// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "akkaserverless/annotations.proto";
import "google/api/annotations.proto";

package js.chirp.api;

option go_package = "$packageInPathFormat";
option java_outer_classname = "ChirpApi";

message ChirpRequest {
    string user_name = 1 [(akkaserverless.field).entity_key = true];
    string text = 2;
}

message LikeRequest  {
    string user_name = 1 [(akkaserverless.field).entity_key = true];
    string chirp_id = 2;
}

message GetUserChirpsRequest  {
    string user_name = 1 [(akkaserverless.field).entity_key = true];
}

message Chirp {
    string chirp_id = 1;
    string text = 3;
    int32 likes = 4;
}

message UserChirps {
    string user_name = 1;
    repeated Chirp chirps = 2;
}

service ChirpService {
    option (akkaserverless.service).entity.type = ".domain.UserChirps";

    rpc Chirp(ChirpRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/chirps/{user_name}"
            body: "*"
        };
    }

    rpc Like(LikeRequest) returns (google.protobuf.Empty) {
        option (google.api.http).put = "/chirps/{user_name}/chirp/{chirp_id}/like";
    }

    rpc GetUserChirps(GetUserChirpsRequest) returns (UserChirps) {
        option (google.api.http) = {
            get: "/chirps/{user_name}"
        };
    }
}